--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return list(map(lambda trip: dict(trip_distance=, )))"
+    "    return list(map(lambda trip: dict(trip_distance=, pickup_latitude=, pickup_longitude=)), trips)"
    ]
   },
   {
