--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    \n",
+    "    parse_fnct = \n",
     "    return list(map(lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude=, pickup_longitude=)), trips)\n",
     "\n",
     "\n",
