Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    parse_fnct = lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude= trip['trip_distance'], pickup_longitude=\n",
+    "    parse_fnct = lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude= trip['pickup_latitude'], pickup_longitude= trip['pickup_longitude']\n",
     "    return list(map(lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude=, pickup_longitude=)), trips)\n",
     "\n",
     "\n",
