--- a/index.ipynb
+++ b/index.ipynb
@@ -188,13 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-926746694836>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-926746694836>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(map(parse_fnct, trips))\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def parse_trips(trips):\n",
     "    parse_fnct = lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude= trip['pickup_latitude'], pickup_longitude= trip['pickup_longitude']\n",
-    "    return list(map(lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude=, pickup_longitude=)), trips)\n",
+    "    return list(map(parse_fnct, trips))\n",
     "\n",
     "\n",
     "\n",
