Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
-    "    parse_fnct = lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude= trip['pickup_latitude'], pickup_longitude= trip['pickup_longitude']\n",
+    "    parse_fnct = lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude= trip['pickup_latitude'], pickup_longitude= trip['pickup_longitude'])\n",
     "    return list(map(parse_fnct, trips))\n",
     "\n",
     "\n",
