Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -188,18 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
     "    parse_fnct = lambda trip: dict(trip_distance= trip['trip_distance'], pickup_latitude= trip['pickup_latitude'], pickup_longitude= trip['pickup_longitude'])\n",
-    "    return list(map(parse_fnct, trips))\n"
+    "    return list(map(parse_fnct, trips))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +214,7 @@
        " 'pickup_longitude': '-73.781149999999997'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
