Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,8 +237,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def \n",
     "def float_values(trips):    \n",
-    "    pass"
+    "    retu"
    ]
   },
   {
