Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_\n",
+    "def clean_trip\n",
     "def float_values(trips):    \n",
     "    retu"
    ]
