Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,6 +238,8 @@
    "outputs": [],
    "source": [
     "def clean_trip(trip):\n",
+    "    cleaned_trip = trip.copy()\n",
+    "    cleaned_trip['']\n",
     "    return dict\n",
     "def float_values(trips):    \n",
     "    retu"
