Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,8 +238,7 @@
    "outputs": [],
    "source": [
     "def clean_trip(trip):\n",
-    "    cleaned_trip = trip.copy()\n",
-    "    cleaned_trip['']\n",
+    "    trip['trip_distance'] = float(trip['trip_distance'])\n",
     "    return dict\n",
     "def float_values(trips):    \n",
     "    retu"
