Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,9 +239,12 @@
    "source": [
     "def clean_trip(trip):\n",
     "    trip['trip_distance'] = float(trip['trip_distance'])\n",
-    "    return dict\n",
+    "    trip['pickup_latitude'] = float(trip['pickup_latitude'])\n",
+    "    trip['pickup_longitude'] = float(trip['pickup_longitude'])\n",
+    "    return trip\n",
+    "\n",
     "def float_values(trips):    \n",
-    "    retu"
+    "    return list"
    ]
   },
   {
