Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        " 'pickup_longitude': '-73.781149999999997'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
     "    trip['trip_distance'] = float(trip['trip_distance'])\n",
     "    trip['pickup_latitude'] = float(trip['pickup_latitude'])\n",
     "    trip['pickup_longitude'] = float(trip['pickup_longitude'])\n",
-    "    return trip\n",
+    "    return dict()\n",
     "\n",
     "def float_values(trips):    \n",
     "    return list(map(clean_trip, trips))"
@@ -3243,7 +3243,6 @@
    ],
    "source": [
     "cleaned_trips[0]\n",
-    "parsed_trips\n",
     "# {'pickup_latitude': 40.64499,\n",
     "#  'pickup_longitude': -73.78115,\n",
     "#  'trip_distance': 18.38}"
