Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,11 @@
     "    trip['trip_distance'] = float(trip['trip_distance'])\n",
     "    trip['pickup_latitude'] = float(trip['pickup_latitude'])\n",
     "    trip['pickup_longitude'] = float(trip['pickup_longitude'])\n",
-    "    return dict()\n",
+    "    return dict(\n",
+    "        trip_distance=float(trip['trip_distance']),\n",
+    "        float(trip['pickup_latitude']),\n",
+    "        float(trip['pickup_longitude'])\n",
+    "    )\n",
     "\n",
     "def float_values(trips):    \n",
     "    return list(map(clean_trip, trips))"
