--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -491,7 +491,7 @@
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    return folium.CircleMarker('location' = location)"
+    "    return folium.CircleMarker(location = location)"
    ]
   },
   {
