--- a/index.ipynb
+++ b/index.ipynb
@@ -486,12 +486,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    return folium.CircleMarker('location' = location)"
+    "    return folium.CircleMarker(location = location, radius = 6)"
    ]
   },
   {
