--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    pass"
+    "    return list(map())"
    ]
   },
   {
