Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,12 +527,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    return list(map(lambda trip: to_marke))"
+    "    return list(map(lambda trip: to_marker(location(trip)), trips))"
    ]
   },
   {
