--- a/index.ipynb
+++ b/index.ipynb
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    pass"
+    "    for "
    ]
   },
   {
