--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,8 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    for "
+    "    for marker in markers:\n",
+    "        map_obj"
    ]
   },
   {
