Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -768,7 +768,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    squared_distance = (neighbor_trip['lattitude'])"
+    "    squared_distance = (neighbor_trip['latitude'] - selected_trip['latitude'])**2 + "
    ]
   },
   {
