Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -768,7 +768,11 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    squared_distance = (neighbor_trip['latitude'] - selected_trip['latitude'])**2 + "
+    "    squared_distance = (neighbor_trip['latitude'] - selected_trip['latitude'])**2 + (neighbor_trip['longitude'] - selected_trip['longitude'])**2\n",
+    "    return math.\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
