--- a/index.ipynb
+++ b/index.ipynb
@@ -768,7 +768,7 @@
     "import math\n",
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
-    "    squared_distance = (neighbor_trip['latitude'] - selected_trip['latitude'])**2 + (neighbor_trip['longitude'] - selected_trip['longitude'])**2\n",
+    "    squared_distance = (neighbor_trip['pickup_latitude'] - selected_trip['latitude'])**2 + (neighbor_trip['longitude'] - selected_trip['longitude'])**2\n",
     "    return math.sqrt(squared_distance)    "
    ]
   },
