Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -810,7 +810,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    \n",
+    "    arranged_neighbor_trip\n",
     "    pass"
    ]
   },
