Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -810,7 +810,8 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    arranged_neighbor_trip\n",
+    "    arranged_neighbor_trip = neighbor_trip.copy()\n",
+    "    arranged_neighbor_trip['distance_from_selected'] = \n",
     "    pass"
    ]
   },
