Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -873,6 +873,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
+    "    filtered_neighbors\n",
     "    pass"
    ]
   },
