--- a/index.ipynb
+++ b/index.ipynb
@@ -873,7 +873,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    filtered_neighbors = list(filter(lambda neighbor: neighbor))\n",
+    "    filtered_neighbors = list(filter(lambda neighbor: neighbor['pickup_latitude'] <> neighbor['pickup_latitude'] ))\n",
     "    pass"
    ]
   },
