--- a/index.ipynb
+++ b/index.ipynb
@@ -873,8 +873,8 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    filtered_neighbors = list(filter(lambda neighbor: neighbor['pickup_latitude'] <> selected_individual['pickup_latitude']) and (neighbor['pickup_longitude'] <> selected_individual['pickup_longitude']) ))\n",
-    "    pass"
+    "    filtered_neighbors = list(filter(lambda neighbor: (neighbor['pickup_latitude'] <> selected_individual['pickup_latitude']) and (neighbor['pickup_longitude'] <> selected_individual['pickup_longitude']), neighbors))\n",
+    "    return list(map)"
    ]
   },
   {
