--- a/index.ipynb
+++ b/index.ipynb
@@ -874,7 +874,7 @@
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    filtered_neighbors = list(filter(lambda neighbor: (neighbor['pickup_latitude'] <> selected_individual['pickup_latitude']) and (neighbor['pickup_longitude'] <> selected_individual['pickup_longitude']), neighbors))\n",
-    "    return list(map(lambda neighbor: , ))"
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), ))"
    ]
   },
   {
