--- a/index.ipynb
+++ b/index.ipynb
@@ -868,13 +868,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-57-39034e4216b8>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-39034e4216b8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    filtered_neighbors = list(filter(lambda neighbor: (neighbor['pickup_latitude'] <> selected_individual['pickup_latitude']) and (neighbor['pickup_longitude'] <> selected_individual['pickup_longitude']), neighbors))\u001b[0m\n\u001b[0m                                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    filtered_neighbors = list(filter(lambda neighbor: (neighbor['pickup_latitude'] <> selected_individual['pickup_latitude']) and (neighbor['pickup_longitude'] <> selected_individual['pickup_longitude']), neighbors))\n",
-    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), ))"
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), filtered_neighbors))"
    ]
   },
   {
