Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -868,29 +868,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-57-39034e4216b8>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-39034e4216b8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    filtered_neighbors = list(filter(lambda neighbor: (neighbor['pickup_latitude'] <> selected_individual['pickup_latitude']) and (neighbor['pickup_longitude'] <> selected_individual['pickup_longitude']), neighbors))\u001b[0m\n\u001b[0m                                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    filtered_neighbors = list(filter(lambda neighbor: (neighbor['pickup_latitude'] <> selected_individual['pickup_latitude']) and (neighbor['pickup_longitude'] <> selected_individual['pickup_longitude']), neighbors))\n",
+    "    filtered_neighbors = list(filter(lambda neighbor: (neighbor['pickup_latitude'] != selected_individual['pickup_latitude']) and (neighbor['pickup_longitude'] != selected_individual['pickup_longitude']), neighbors))\n",
     "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), filtered_neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'trip_distance': 1.3,\n",
+       "  'pickup_latitude': 40.766931,\n",
+       "  'pickup_longitude': -73.982098,\n",
+       "  'distance_from_selected': 0.23505256047318146},\n",
+       " {'trip_distance': 4.5,\n",
+       "  'pickup_latitude': 40.77773,\n",
+       "  'pickup_longitude': -73.951902,\n",
+       "  'distance_from_selected': 0.2162779533470808},\n",
+       " {'trip_distance': 2.4,\n",
+       "  'pickup_latitude': 40.795678,\n",
+       "  'pickup_longitude': -73.971049,\n",
+       "  'distance_from_selected': 0.24242215976473674}]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cleaned_trips and distance_all(first_trip, cleaned_trips[0:4])"
    ]
