--- a/index.ipynb
+++ b/index.ipynb
@@ -922,6 +922,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
+    "    number \n",
     "    pass"
    ]
   },
