--- a/index.ipynb
+++ b/index.ipynb
@@ -922,7 +922,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    number \n",
+    "    number = number or len(trips)\n",
+    "    neigh\n",
     "    pass"
    ]
   },
