Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -923,7 +923,8 @@
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    number = number or len(trips)\n",
-    "    neigh\n",
+    "    neighbor_trips = distance_all(selected_trip, trips)\n",
+    "    sorted_\n",
     "    pass"
    ]
   },
