Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -924,7 +924,7 @@
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    number = number or len(trips)\n",
     "    neighbor_trips = distance_all(selected_trip, trips)\n",
-    "    sorted_neighbor_trips = sorted(neighbor_trips, key=)\n",
+    "    sorted_neighbor_trips = sorted(neighbor_trips, key=lambda trip: trip[''])\n",
     "    pass"
    ]
   },
